--- a/source/doc/bindings.slim
+++ b/source/doc/bindings.slim
@@ -1,5 +1,7 @@
 .row
-  .large-12.columns
+  .large-3.columns
+    table.pos-fixed.scroll-nav
+  .large-9.columns
     .feature
       == partial 'doc/bindings/_01_const'
     .feature
@@ -9,3 +11,29 @@
 
 javascript:
   $("#bindings").addClass('active');
+  $(document).ready(function() {
+    $('.scroll-nav').width($('.scroll-nav').parent('.large-3').width()-20);
+    $('.feature h4').each(function(i, el){
+      $(this).attr('data-text', $(el).text().split('、')[1]);
+      if(i == 0){
+        $('.scroll-nav').append('<tr><td class="active">' + $(el).text().split('、')[1] + '</td></tr>');
+      } else {
+        $('.scroll-nav').append('<tr><td>' + $(el).text().split('、')[1] + '</td></tr>');
+      }
+    });
+    $('.scroll-nav td').on('click', function(e){
+      e.preventDefault();
+      if($(this).find('a').length > 0){
+        var target = $( $(this).find('a').attr('href') );
+      } else {
+        console.log($(this).text());
+        var target = $('.feature').find('[data-text="' + $(this).text() + '"]');
+        console.log(target);
+      }
+      $('.scroll-nav td').removeClass('active');
+      $(this).addClass('active');
+      $('html, body').animate({
+        scrollTop: target.offset().top - 48
+      }, 1000);
+    });
+  });
