--- a/source/doc/built_ins/_10_well_known_symbols.slim
+++ b/source/doc/built_ins/_10_well_known_symbols.slim
@@ -1,8 +1,8 @@
 h4 十、常用的 symbols
 h5.subheader well known symbols
 .feature-content
-  h5 .
-  h5.subheader 
-  pre
-    code.javascript
-  p 结果为 true。
+  / h5 .
+  / h5.subheader 
+  / pre
+  /   code.javascript
+  / p 结果为 true。
