--- a/source/doc/built_ins/_04_weak_map.slim
+++ b/source/doc/built_ins/_04_weak_map.slim
@@ -1,8 +1,8 @@
 h4 四、weakMap
 h5.subheader weakMap
 .feature-content
-  h5 .
-  h5.subheader 
-  pre
-    code.javascript
-  p 结果为 true。
+  / h5 .
+  / h5.subheader 
+  / pre
+  /   code.javascript
+  / p 结果为 true。
