--- a/source/doc/built_ins/_09_symbol.slim
+++ b/source/doc/built_ins/_09_symbol.slim
@@ -1,8 +1,8 @@
 h4 九、Symbol
 h5.subheader Symbol
 .feature-content
-  h5 .
-  h5.subheader 
-  pre
-    code.javascript
-  p 结果为 true。
+  / h5 .
+  / h5.subheader 
+  / pre
+  /   code.javascript
+  / p 结果为 true。
