--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -48,12 +48,13 @@ html
             |项目托管在 
             a href="https://github.com/wendycan/es6tutorial" target="_blank"
               i.fa.fa-ok
-              |es6tutorial
+              |GitHub
           p 
             |作者 
             a href="https://github.com/wendycan" target="_blank" wendy
           p 
             |友情链接
+            a href="http://wendycan.org" target="_blank" wendy的小站
             a href="http://yuetai.wendycan.org" target="_blank" 阅台
     javascript:
       $(document).foundation();
