Show nav just for large

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,7 +7,7 @@ title: ECMAScript6 新特性
     h4 ECMAScript6 新特性
     br/
 .row
-  .large-3.columns
+  .large-3.columns.show-for-large-only
     table.pos-fixed.scroll-nav
       tr
         td.active
@@ -35,7 +35,7 @@ title: ECMAScript6 新特性
         td
           a href="#c-Annex-b"  
 
-  .large-9.columns
+  .large-9.columns.medium-12
     #container.container
 
 script#t-table type="text/template" 
