--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -43,7 +43,7 @@ html
       == yield
     .footer.wrap
       .row
-        .large-8.large-centered
+        .large-8.large-centered.small-10.small-centered
           p 
             |项目托管在 
             a href="https://github.com/wendycan/es6tutorial" target="_blank"
