--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -7,7 +7,7 @@ title: ECMAScript6 新特性
     h4 ECMAScript6 新特性
     br/
 .row
-  .large-3.columns.show-for-large-only
+  .large-3.columns.show-for-large-up
     table.pos-fixed.scroll-nav
       tr
         td.active
