--- a/source/doc/built-ins.slim
+++ b/source/doc/built-ins.slim
@@ -1,5 +1,5 @@
 .row
-  .large-3.columns.show-for-large-only
+  .large-3.columns.show-for-large-up
     table.pos-fixed.scroll-nav
   .large-9.columns
     .feature
