--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -1,75 +1,12 @@
 .row
   .columns.large-12
   h4 Wendy
+  canvas#springydemo width="640" height="480"
 
 script src="/javascripts/enumerator.js" type="text/javascript"
 script src="/javascripts/promise.js" type="text/javascript"
+script src="/javascripts/followers.js" type="text/javascript"
 
 javascript:
   $("#examples").addClass('active');
-  function getWordsBetweenAnglebrackets(str) {
-    var results = [], re = /<([^>]+)>/g, text;
-    while(text = re.exec(str)) {
-      results.push(text[1]);
-    }
-    return results;
-  }
-  function renderUsers (users) {
-    for (var i = 0; i < users.length; i++) {
-     //console.log(users[i]);
-    };
-  }
-
-  $(document).ready(function () {
-    function load_res (url) {
-      return new Promise(function (resolve, reject) {
-        $.ajax({
-          url: url,
-          type: 'GET',
-          data: {
-            client_id: '6a853226916e0c9e3295',
-            client_secret: 'd677255b6d9b8d79d5bd52902bbcfaeae0b0ecd9'
-          },
-          success: function(data, status, xhr){
-            var result = {
-              body: data,
-              xhr: xhr
-            }
-            resolve(result);
-          },
-          error: function (e) {
-            reject()
-            console.log(e);
-          }
-        });
-      })
-    }
-    // var p1 = load_res('http://api.github.com/users/wendycan')
-    // var p2 = load_res('http://api.github.com/users/yandy')
-    // var p_users = [p1, p2];
-    // var p = Promise.all(p_users).then(function (data) {
-    //   console.log(data);
-    // }, function (reason) {
-    //   console.log(reason)
-    // });
-    var p1 = load_res('http://api.github.com/users/wendycan/followers');
-    p1.then(function (data) {
-      var users = [];
-      var links = data.xhr.getResponseHeader('Link');
-      var urlPrefix = getWordsBetweenAnglebrackets(links)[0].split('page=')[0] + 'page=';
-      var length = getWordsBetweenAnglebrackets(links)[1].split('page=')[1];
-      var p_pages = [];
-      for(var i = 1;i <= length;i++){
-        var url = urlPrefix + i;
-        p_pages.push(load_res(url));
-       }
-       var p = Promise.all(p_pages).then(function (data) {
-        for (var i = 0; i < data.length; i++) {
-          for (var j = 0; j < data[i].body.length; j++) {
-            users.push(data[i].body[j]);
-          };
-        };
-        renderUsers(users);
-       });
-     });
-   });
+  
