--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -37,6 +37,8 @@ html
               a href="/doc/misc.html"  混杂
             li#annex-b
               a href="/doc/annex-b.html"  附录
+            li#examples
+              a href="/examples"  实例
             li
               a href="http://kangax.github.io/compat-table/es6/#ie11tp" target="_blank"  兼容性
     .wrap
