Draw level one relations

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -1,7 +1,7 @@
 .row
   .columns.large-12
-  h4 Wendy
-  canvas#springydemo width="640" height="480"
+    h4 Wendy
+    canvas#followers_graph width="640" height="600"
 
 script src="/javascripts/enumerator.js" type="text/javascript"
 script src="/javascripts/promise.js" type="text/javascript"
