Add follers table

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -1,7 +1,18 @@
 .row
   .columns.large-12
-    h4 Wendy
-    canvas#followers_graph width="640" height="600"
+    h4 
+      a href="https://github.com/wendycan" target="_target" wendycan
+    .meta
+  .columns.large-12
+    table.followers-table
+      thead
+        tr
+          th gravator
+          th username
+          th follwers
+          th follwerings
+          th starred
+      tbody
 
 script src="/javascripts/enumerator.js" type="text/javascript"
 script src="/javascripts/promise.js" type="text/javascript"
