Add meta to follwers

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -7,11 +7,15 @@
     table.followers-table
       thead
         tr
-          th gravator
-          th username
-          th follwers
-          th follwerings
-          th starred
+          th 图像
+          th 用户名
+          th 被关注
+          th 关注中
+          th 公开项目
+          th 公开 Gist
+          th 公司
+          th 位置
+          th 加入时间
       tbody
 
 script src="/javascripts/enumerator.js" type="text/javascript"
