--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -50,4 +50,35 @@ p {
   img {
     width: 60px;
   }
+  th, td {
+    text-align: center;
+  }
+  th:first-child {
+    width: 10%;
+  }
+  th:nth-child(2) {
+    width: 12%;
+  }
+  th:nth-child(3) {
+    width: 10%;
+  }
+  th:nth-child(4) {
+    width: 10%;
+  }
+  th:nth-child(5) {
+    width: 10%;
+  }
+  th:nth-child(6) {
+    width: 10%;
+  }
+  th:nth-child(7) {
+    width: 12%;
+  }
+  th:nth-child(8) {
+    width: 15%;
+  }
+  th:nth-child(9) {
+    width: 11%;
+  }
+
 }
