Add following users

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -2,9 +2,27 @@
   .columns.large-12
     h4 
       a href="https://github.com/wendycan" target="_target" wendycan
+    br
     .meta
+  br
+  br
   .columns.large-12
+    h5 谁关注了她
     table.followers-table
+      thead
+        tr
+          th 图像
+          th 用户名
+          th 被关注
+          th 关注中
+          th 公开项目
+          th 公开 Gist
+          th 公司
+          th 位置
+          th 加入时间
+      tbody
+    h5 她关注了谁
+    table.followings-table
       thead
         tr
           th 图像
