Highlight user when has followers more than 200

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -7,7 +7,7 @@
   br
   br
   .columns.large-12
-    h5 谁关注了她
+    h5 谁关注了我
     table.followers-table
       thead
         tr
@@ -21,7 +21,7 @@
           th 位置
           th 加入时间
       tbody
-    h5 她关注了谁
+    h5 我关注了谁
     table.followings-table
       thead
         tr
