Add loading gif

--- a/source/examples/promise.slim
+++ b/source/examples/promise.slim
@@ -1,13 +1,17 @@
-.row
+.row.promise-example
   .columns.large-12
     h4 
       a href="https://github.com/wendycan" target="_target" wendycan
     br
     .meta
+      .text-center
+        img src="/images/loading.gif"
   br
   br
   .columns.large-12
-    h5 谁关注了我
+    h5.title 
+      |谁关注了我
+      img src="/images/loading.gif"
     table.followers-table
       thead
         tr
@@ -21,7 +25,9 @@
           th 位置
           th 加入时间
       tbody
-    h5 我关注了谁
+    h5.title
+      |我关注了谁
+      img src="/images/loading.gif"
     table.followings-table
       thead
         tr
